fix(styles): adjust width for image in header component on smaller screens

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -75,7 +75,7 @@
 
       @media (width <= 640px) {
         top: 83%;
-        width: 69%;
+        width: 73%;
       }
 
       @media (width <= 400px) {
